# Wave-Equation-Research-Lab-Project

./: .gitignore  README.md
main-task/: functions.py  time_convergence.py  wave_convergence.py  wave_equation.py
parallelization/: .gitignore  CMakeLists.txt
parallelization/profiling/: massif.out.9640
parallelization/src/: commons.hpp  csv_printer.cpp  csv_printer.hpp  main.cpp  matrix.hpp  matrix3.hpp  numerics.cpp  numerics.hpp  omp_test.cpp  runge_kutta.hpp
parallelization/src/preliminaries/: RNG.hpp  commons.hpp  main.cpp  matrix.hpp  runge_kutta.hpp
parallelization/tools/: benchmark.py  plot.py
